Fix flicker style

--- a/incamp19/todo/css/app.css
+++ b/incamp19/todo/css/app.css
@@ -137,8 +137,11 @@ textarea {
     0% {
         opacity: 25%;
     }
-    100% {
+    50% {
         opacity: 50%;
+    }
+    100% {
+        opacity: 25%;
     }
 }
 
